# splatfastk1

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md  Start_SplatfastK1.bat  pyproject.toml
.github/workflows/: ci.yml  publish-replicate.yml
blender_addon/: __init__.py
desktop/: cancel_predictions.py  check_predictions.py  config.py  generate_icon.py  main.py  resume_cloud.py  setup_helpers.py  style.qss  test_buttons.py
desktop/cloud/: __init__.py  replicate_client.py
desktop/widgets/: cloud_worker.py  main_window.py  pipeline_worker.py  project_view.py  projects_view.py  settings_view.py  setup_view.py  sidebar.py  start_screen.py
docs/: ARCHITECTURE.md  FOOTAGE_GUIDE.md  ROADMAP.md  SKYSPLAT_REFERENCE.md
examples/: sample-project.json
replicate_model/: cog.yaml  predict.py
src/splatforge/: cli.py  doctor.py  hardware.py  pipeline.py  tools.py
src/splatforge/backends/: __init__.py  base.py  brush.py
src/splatforge/ui/: __init__.py  server.py
tests/: test_cli.py  test_hardware.py  test_pipeline.py  test_tools.py  test_ui.py
