[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "splatforge"
version = "0.1.0"
description = "Turn video or image sequences into Blender-ready Gaussian splat project folders."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SplatfastK1 Contributors" }
]
keywords = ["gaussian-splatting", "blender", "photogrammetry", "colmap", "glomap"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Graphics :: 3D Modeling"
]
dependencies = [
  # Desktop UI
  "PyQt6>=6.6",
  # Secure storage of the Replicate API token in Windows Credential Manager
  "keyring>=24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
splatforge = "splatforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
# Only collect from tests/ — the desktop/test_buttons.py is a real-Qt
# smoke test meant to be run locally with `python -m desktop.test_buttons`,
# not as part of headless CI.
testpaths = ["tests"]
